[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddcrelight"
description = 'Update monitor brightness intelligently using the DDC protocol.'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0+"
keywords = []
authors = [
  { name = "Wyatt Childers", email = "wchilders@nearce.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["yoctopuce"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/DarkArc/ddcrelight#readme"
Issues = "https://github.com/DarkArc/ddcrelight/issues"
Source = "https://github.com/DarkArc/ddcrelight"

[project.scripts]
ddcrelight = "ddcrelight.main:main"

[tool.hatch.version]
path = "ddcrelight/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ddcrelight --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ddcrelight/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
